@@ -2,6 +2,8 @@
 0.0.99
 ========================
 
+- fixed `Message-ID` generator for email messages
+
 ========================
 0.0.98
 ========================
